--- a/static/css.css
+++ b/static/css.css
@@ -122,3 +122,26 @@
     padding-right: 10px;
     margin-top: 10px;
 }
+
+
+.download-box {
+    border-top: 1px solid #a1c7e6;
+    height: 60px;
+    line-height: 42px;
+    padding:10px 0 0 60px;
+    font-size: 16px;
+    text-align: center;
+	margin-top: 20px;
+}
+
+.download-box img{
+	float: right;
+    margin-top: -10px;
+	width:100px;height:100px;
+}
+.download-box div{
+	float: left;
+    text-align: left;
+    padding-right: 10px;
+    margin-top: 10px;
+}
