--- a/static/css.css
+++ b/static/css.css
@@ -58,7 +58,7 @@
 .basic-grey h1>span {
 	display:block;
 	font-size:11px;
-	padding-top:20px;
+	padding:20px 20px 0 0;
 	padding-bottom:10px;
 	text-align: left;
 }
