--- a/static/css.css
+++ b/static/css.css
@@ -112,7 +112,7 @@
     line-height: 42px;
     background: #f2f9f3;
     color: #1e4e7b;
-    padding: 0 10px;
+    padding-left:100px;
     font-size: 16px;
     text-align: center;
 	margin-left: 5px;
