--- a/static/css.css
+++ b/static/css.css
@@ -152,14 +152,23 @@
 .download-input{
 	width: 82%;
 }
-
  
-.mask{background-color:rgba(0,0,0,0.2); width:100%; height:100%;position:fixed;top:0;left:0;}
-.prompt_box{width:400px;height:200px;background:#ffffff;border-radius:6px;
-position:fixed;top:25%; left:50%; margin-left:-200px;overflow: hidden;}
-.prompt_box .prompt_title{height:40px;line-height:40px;padding-left:20px;border-bottom:2px solid #a1c7e6;background:#e6e6e6;position: relative;}
-.prompt_box .prompt_title h3{font-size:16px;color: #333333; margin-top:0;}
-.prompt_box .prompt_cancel{width:24px;height:24px;position: absolute;right:0;top:0;}
+.mask{
+	background-color:rgba(0,0,0,0.2); width:100%; height:100%;position:fixed;top:0;left:0;
+}
+.prompt_box{
+	width:400px;height:200px;background:#ffffff;border-radius:6px;
+	position:fixed;top:25%; left:50%; margin-left:-200px;overflow: hidden;
+}
+.prompt_box .prompt_title{
+	height:40px;line-height:40px;padding-left:20px;border-bottom:2px solid #a1c7e6;background:#e6e6e6;position: relative;
+}
+.prompt_box .prompt_title h3{
+	font-size:16px;color: #333333; margin-top:0;
+}
+.prompt_box .prompt_cancel{
+	width:24px;height:24px;position: absolute;right:0;top:0;
+}
 
 .prompt_box .prompt_cont{
 	position: relative;height:158px;
@@ -167,9 +176,14 @@ position:fixed;top:25%; left:50%; margin-left:-200px;overflow: hidden;}
 .prompt_box .prompt_cont .prompt_text{
   line-height:100px;text-align: center;
 }
-.prompt_box .prompt_cont .prompt_sure{position: absolute;right:20px;bottom:34px;
-width:50px;height: 26px;background:#0969da;border-radius:5px;color:#ffffff;
-font-size: 14px;line-height:26px;text-align: center;}
-
-.hide{display:none;}
-.show{display:block;}
+.prompt_box .prompt_cont .prompt_sure{
+	position: absolute;right:20px;bottom:34px;
+	width:50px;height: 26px;background:#0969da;border-radius:5px;color:#ffffff;
+	font-size: 14px;line-height:26px;text-align: center;
+}
+.hide{
+	display:none;
+}
+.show{
+	display:block;
+}
