--- a/static/css.css
+++ b/static/css.css
@@ -161,7 +161,7 @@ transform: scale(1.2);
 	background-color:rgba(0,0,0,0.2); width:100%; height:100%;position:fixed;top:0;left:0;
 }
 .prompt_box{
-	width:400px;height:200px;background:#ffffff;border-radius:6px;
+	width:400px;min-height:200px;height:auto;background:#ffffff;border-radius:6px;
 	position:fixed;top:25%; left:50%; margin-left:-200px;overflow: hidden;
 }
 .prompt_box .prompt_title{
@@ -175,10 +175,12 @@ transform: scale(1.2);
 }
 
 .prompt_box .prompt_cont{
-	position: relative;height:158px;
+	position: relative;min-height:158px;height:auto;
 }
 .prompt_box .prompt_cont .prompt_text{
-  line-height:100px;text-align: center;
+  line-height:25px;
+  text-align: left;
+  padding: 10px 0 0 20px;
 }
 .prompt_box .prompt_cont .prompt_sure{
 	position: absolute;right:20px;bottom:34px;
