--- a/static/css.css
+++ b/static/css.css
@@ -107,10 +107,10 @@
 }
 
 .explain {
-    border: 1px solid #a1c7e6;
+    border: 1px solid #0969da;
     height: 60px;
     line-height: 42px;
-    background: #f2f4f9;
+    background: #f2f6f9;
     color: #1e4e7b;
     padding-left:100px;
     font-size: 19px;
@@ -126,7 +126,7 @@
 
 
 .download-box {
-    border-top: 1px solid #a1c7e6;
+    border-top: 1px solid #0969da;
     height: 60px;
     line-height: 42px;
     padding:10px 0 0 25px;
