--- a/static/css.css
+++ b/static/css.css
@@ -126,14 +126,14 @@
 
 
 .download-box {
-    border-top: 1px solid #0969da;
+    border-top: 1px solid #E4E4E4;
     height: 60px;
     line-height: 42px;
     padding:10px 0 0 25px;
     font-size: 16px;
     text-align: center;
 	margin-top: 20px;    
-	margin-left: 5px;
+	margin: 25px -15px 0 -10px;
 }
 
 .download-box img{
