--- a/static/css.css
+++ b/static/css.css
@@ -107,7 +107,7 @@
 }
 
 .explain {
-    border: 1px solid #0969da;
+    border: 1px solid #bec3ec;
     height: 60px;
     line-height: 42px;
     background: #f2f6f9;
@@ -129,7 +129,7 @@
     border-top: 1px solid #E4E4E4;
     height: 60px;
     line-height: 42px;
-    padding:10px 0 0 25px;
+    padding:10px 0 0 38px;
     font-size: 16px;
     text-align: center;
 	margin-top: 20px;    
@@ -150,10 +150,11 @@
 	float: left;
     text-align: left;
     margin-top: 10px;
+	margin-right: -2px;
 }
 
 .download-input{
-	width: 82%;
+	width: 81%;
 }
  
 .mask{
