--- a/static/css.css
+++ b/static/css.css
@@ -8,7 +8,7 @@
 	margin-left:auto;
 	margin-right:auto;
 	max-width:970px;
-	background:#F7F7F7;
+	background:#f6f6f6;
 	padding:25px 15px 25px 10px;
 	font:12px Georgia,"Times New Roman",Times,serif;
 	color:#888;
@@ -20,7 +20,7 @@
 	margin-left:auto;
 	margin-right:auto;
 	max-width:970px;
-	background:#F7F7F7;
+	background:#f6f6f6;
 	padding:25px 15px 25px 10px;
 	font:12px Georgia,"Times New Roman",Times,serif;
 	color:#888;
@@ -31,21 +31,6 @@
 	margin:10px;
 }
 
-
-.basic-grey {
-	margin-left:auto;
-	margin-right:auto;
-	max-width:970px;
-	background:#F7F7F7;
-	padding:25px 15px 25px 10px;
-	font:12px Georgia,"Times New Roman",Times,serif;
-	color:#888;
-	text-shadow:1px 1px 1px #FFF;
-	border:1px solid #E4E4E4;
-	display: inline-block;
-	width:580px;
-	margin:10px;
-}
 .basic-grey h1 {
 	font-size:25px;
 	padding:0px 0px 10px 40px;
